--- a/core/pom.xml
+++ b/core/pom.xml
@@ -333,6 +333,23 @@
                 </dependency>
             </dependencies>
         </profile>
+        <profile>
+            <id>latest-scripting-bundles</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.apache.sling</groupId>
+                    <artifactId>org.apache.sling.scripting.api</artifactId>
+                    <version>2.2.0</version>
+                    <scope>compile</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.sling</groupId>
+                    <artifactId>org.apache.sling.scripting.core</artifactId>
+                    <version>2.0.58</version>
+                    <scope>compile</scope>
+                </dependency>
+            </dependencies>
+        </profile>
     </profiles>
 
 </project>
