--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>org.apache.sling.testing.sling-mock.parent</artifactId>
-    <version>2.3.19-SNAPSHOT</version>
+    <version>2.4.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Apache Sling Testing Sling Mock Parent</name>
@@ -40,7 +40,7 @@
         <jcr-mock.version>1.4.4</jcr-mock.version>
         <resourceresolver-mock.version>1.1.24</resourceresolver-mock.version>
         <logging-mock.version>2.0.0</logging-mock.version>
-        <servlet-helpers.version>1.3.1-SNAPSHOT</servlet-helpers.version>
+        <servlet-helpers.version>1.3.0</servlet-helpers.version>
         <resourcebuilder.version>1.0.4</resourcebuilder.version>
 
     </properties>
