--- a/core/pom.xml
+++ b/core/pom.xml
@@ -362,6 +362,16 @@
                     <artifactId>org.apache.sling.scripting.core</artifactId>
                     <version>2.0.58</version>
                     <scope>compile</scope>
+                    <exclusions>
+                      <exclusion>
+                        <groupId>org.osgi</groupId>
+                        <artifactId>org.osgi.core</artifactId>
+                      </exclusion>
+                      <exclusion>
+                        <groupId>org.osgi</groupId>
+                        <artifactId>org.osgi.compendium</artifactId>
+                      </exclusion>
+                    </exclusions>
                 </dependency>
             </dependencies>
         </profile>
