--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -28,7 +28,7 @@
     </parent>
 
     <artifactId>org.apache.sling.testing.sling-mock.parent</artifactId>
-    <version>2.4.0</version>
+    <version>2.4.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Apache Sling Testing Sling Mock Parent</name>
@@ -124,8 +124,4 @@
             </build>
         </profile>
     </profiles>
-
-  <scm>
-    <tag>org.apache.sling.testing.sling-mock.reactor-2.4.0</tag>
-  </scm>
 </project>
