--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -36,7 +36,7 @@
     
     <properties>
 
-        <osgi-mock.version>2.4.14</osgi-mock.version>
+        <osgi-mock.version>2.4.15-SNAPSHOT</osgi-mock.version>
         <jcr-mock.version>1.4.4</jcr-mock.version>
         <resourceresolver-mock.version>1.1.26</resourceresolver-mock.version>
         <logging-mock.version>2.0.0</logging-mock.version>
