--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.sling</groupId>
         <artifactId>sling-bundle-parent</artifactId>
-        <version>36</version>
+        <version>38</version>
         <relativePath />
     </parent>
 
@@ -37,7 +37,7 @@
     <properties>
 
         <osgi-mock.version>2.4.15-SNAPSHOT</osgi-mock.version>
-        <jcr-mock.version>1.4.4</jcr-mock.version>
+        <jcr-mock.version>1.4.5-SNAPSHOT</jcr-mock.version>
         <resourceresolver-mock.version>1.1.26</resourceresolver-mock.version>
         <logging-mock.version>2.0.0</logging-mock.version>
         <servlet-helpers.version>1.3.0</servlet-helpers.version>
@@ -58,6 +58,13 @@
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>15.0</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
