--- a/core/pom.xml
+++ b/core/pom.xml
@@ -176,6 +176,12 @@
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.xss</artifactId>
+            <version>2.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.resourcebuilder</artifactId>
             <version>${resourcebuilder.version}</version>
             <scope>compile</scope>
