--- a/core/pom.xml
+++ b/core/pom.xml
@@ -104,6 +104,12 @@
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.serviceusermapper</artifactId>
+            <version>1.2.4</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.jcr.api</artifactId>
             <version>2.4.0</version>
             <scope>compile</scope>
@@ -325,31 +331,37 @@
                 <dependency>
                     <groupId>org.apache.sling</groupId>
                     <artifactId>org.apache.sling.api</artifactId>
-                    <version>2.16.4</version>
+                    <version>2.22.0</version>
                     <scope>compile</scope>
                 </dependency>
                 <dependency>
                     <groupId>org.apache.sling</groupId>
                     <artifactId>org.apache.sling.resourceresolver</artifactId>
-                    <version>1.5.34</version>
+                    <version>1.7.0</version>
+                    <scope>compile</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.apache.sling</groupId>
+                    <artifactId>org.apache.sling.serviceusermapper</artifactId>
+                    <version>1.4.6</version>
                     <scope>compile</scope>
                 </dependency>
                 <dependency>
                     <groupId>org.apache.sling</groupId>
                     <artifactId>org.apache.sling.jcr.resource</artifactId>
-                    <version>3.0.8</version>
+                    <version>3.0.22</version>
                     <scope>compile</scope>
                 </dependency>
                 <dependency>
                     <groupId>org.apache.jackrabbit</groupId>
                     <artifactId>jackrabbit-api</artifactId>
-                    <version>2.16.0</version>
+                    <version>2.19.3</version>
                     <scope>compile</scope>
                 </dependency>
                 <dependency>
                     <groupId>org.apache.jackrabbit</groupId>
                     <artifactId>oak-jcr</artifactId>
-                    <version>1.8.2</version>
+                    <version>1.32.0</version>
                     <scope>compile</scope>
                 </dependency>
             </dependencies>
@@ -366,7 +378,7 @@
                 <dependency>
                     <groupId>org.apache.sling</groupId>
                     <artifactId>org.apache.sling.scripting.core</artifactId>
-                    <version>2.0.58</version>
+                    <version>2.0.60</version>
                     <scope>compile</scope>
                     <exclusions>
                       <exclusion>
