--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.sling</groupId>
         <artifactId>org.apache.sling.testing.sling-mock.parent</artifactId>
-        <version>2.6.3-SNAPSHOT</version>
+        <version>2.7.0</version>
         <relativePath>parent/pom.xml</relativePath>
     </parent>
 
@@ -36,7 +36,7 @@
         <connection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-testing-sling-mock.git</connection>
         <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/sling-org-apache-sling-testing-sling-mock.git</developerConnection>
         <url>https://gitbox.apache.org/repos/asf?p=sling-org-apache-sling-testing-sling-mock.git</url>
-        <tag>HEAD</tag>
+        <tag>org.apache.sling.testing.sling-mock.reactor-2.7.0</tag>
     </scm>
 
     <modules>
